--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.0.0
   sqflite:
   path:
+  getwidget: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
