--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite:
   path:
   getwidget: ^2.0.4
+  flutter_native_splash: ^2.2.0+1
 
 
 
@@ -40,6 +41,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+
+flutter_native_splash:
+  color: "#ac58aa"
+  image: "assets/images/joystick.png"
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
