--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   http: ^0.13.4
 
 flutter_native_splash:
-  color: "#ac58aa"
+  color: "#FF5252"
   image: "assets/images/joystick.png"
   android: true
   ios: true
