--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   provider: ^6.0.0
   firebase_core:
   firebase_storage:
+  firebase_messaging: ^11.2.13
+  flutter_local_notifications: ^9.4.0
+  timezone: ^0.8.0
+  flutter_native_timezone: ^2.0.0
   image_picker:
   sqflite:
   path:
